--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uz",
-  "homepage": "https://pak11273.github.io/uz"
+  "homepage": "https://pak11273.github.io/uz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
